--- a/first-spring-step/src/main/webapp/WEB-INF/web.xml
+++ b/first-spring-step/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,7 @@
     <!-- 设置Spring容器加载配置文件路径 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/*.xml</param-value>
+        <param-value>classpath*:spring/*.xml</param-value>
     </context-param>
 
     <listener>
