--- a/first-spring-step/src/main/resources/properties/jdbc.properties
+++ b/first-spring-step/src/main/resources/properties/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/learning?useUnicode=true&amp;characterEncoding=utf-8
-jdbc_username=root
-jdbc_password=Zhangliang@520
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/learning?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=Zhangliang@520
