--- a/first-spring-step/src/main/webapp/WEB-INF/web.xml
+++ b/first-spring-step/src/main/webapp/WEB-INF/web.xml
@@ -71,4 +71,12 @@
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
+
+    <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
 </web-app>
