--- a/first-spring-step/src/main/webapp/WEB-INF/web.xml
+++ b/first-spring-step/src/main/webapp/WEB-INF/web.xml
@@ -72,6 +72,7 @@
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
 
+    <!-- logback begin -->
     <context-param>
         <param-name>logbackConfigLocation</param-name>
         <param-value>classpath:logback.xml</param-value>
@@ -79,4 +80,5 @@
     <listener>
         <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
     </listener>
+    <!-- logback end -->
 </web-app>
