--- a/first-spring-step/src/main/resources/development/properties/wechat.properties
+++ b/first-spring-step/src/main/resources/development/properties/wechat.properties
@@ -1,3 +1,3 @@
-wechat.token=
-wechat.encodingaeskey=
-wechat.cropid=
+wechat.token=a6hlNFP5f5WLoODr6t72dq9HVUUS
+wechat.encodingaeskey=4nQgVIeL9Roeeuiu71ATKALrzowzIzJLeppED5I1ey8
+wechat.cropid=wx107e48645858c81a
