--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -91,13 +91,6 @@
             <version>5.1.40</version>
         </dependency>
 
-        <!-- 阿里巴巴数据源包 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.0.26</version>
-        </dependency>
-
         <!--velocity-->
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -140,6 +133,19 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.46</version>
+        </dependency>
+
+        <!-- 阿里巴巴数据源包 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.26</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
@@ -156,6 +162,7 @@
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
         </dependency>
+
     </dependencies>
 
     <profiles>
