--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -84,6 +84,7 @@
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.0</version>
         </dependency>
+
         <!-- mysql驱动包 -->
         <dependency>
             <groupId>mysql</groupId>
@@ -91,17 +92,37 @@
             <version>5.1.40</version>
         </dependency>
 
-        <!--velocity-->
+        <!--&lt;!&ndash;velocity&ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>org.apache.velocity</groupId>-->
+        <!--<artifactId>velocity</artifactId>-->
+        <!--<version>1.7</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.apache.velocity</groupId>-->
+        <!--<artifactId>velocity-tools</artifactId>-->
+        <!--<version>2.0</version>-->
+        <!--</dependency>-->
+
+        <!-- javax servlet begin -->
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.7</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-tools</artifactId>
-            <version>2.0</version>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <!-- javax servlet end -->
 
         <!-- logback -->
         <dependency>
@@ -125,13 +146,6 @@
             <version>0.1.2</version>
         </dependency>
 
-        <!--ali api-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>taobao-sdk-java-auto</artifactId>
-            <version>6.12.18</version>
-        </dependency>
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -146,21 +160,19 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
         </dependency>
-
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
         </dependency>
-
         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.9</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
 
         <!-- RabbitMQ-->
@@ -169,6 +181,7 @@
             <artifactId>amqp-client</artifactId>
             <version>4.1.0</version>
         </dependency>
+
     </dependencies>
 
     <profiles>
