--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -213,6 +213,12 @@
             <artifactId>WebCollector</artifactId>
             <version>2.32</version>
         </dependency>
+        <!--selenium-->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.3.1</version>
+        </dependency>
 
     </dependencies>
 
