--- a/first-spring-step/src/main/resources/development/properties/jdbc.properties
+++ b/first-spring-step/src/main/resources/development/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://114.215.41.113:3306/mall?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://114.215.41.113:3306/wutongluo?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=jamedow
 jdbc.password=Zhangliang@520
