--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -251,7 +251,7 @@
     </profiles>
 
     <build>
-        <finalName>SpringMVCHelloWorld</finalName>
+        <finalName>wutongluo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
