首页 动态化

--- a/first-spring-step/src/main/webapp/WEB-INF/web.xml
+++ b/first-spring-step/src/main/webapp/WEB-INF/web.xml
@@ -75,7 +75,7 @@
     <!-- learningFilter filter -->
     <!--<filter>-->
     <!--<filter-name>learningFilter</filter-name>-->
-    <!--<filter-class>com.jamedow.learning.common.system.filter.LearningFilter</filter-class>-->
+    <!--<filter-clcom.jamedow.laodoufangngning.common.system.filter.LearningFilter</filter-class>-->
     <!--</filter>-->
     <!--<filter-mapping>-->
     <!--<filter-name>learningFilter</filter-name>-->
