--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jamedow.learning</groupId>
-    <artifactId>SpringMVCHelloWorld</artifactId>
+    <groupId>com.jamedow.laodoufang</groupId>
+    <artifactId>laodoufang</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>learning Maven Webapp</name>
@@ -251,7 +251,7 @@
     </profiles>
 
     <build>
-        <finalName>wutongluo</finalName>
+        <finalName>laodoufang</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
