--- a/first-spring-step/src/main/webapp/WEB-INF/web.xml
+++ b/first-spring-step/src/main/webapp/WEB-INF/web.xml
@@ -73,14 +73,14 @@
     </filter-mapping>
 
     <!-- learningFilter filter -->
-    <!--<filter>-->
-    <!--<filter-name>learningFilter</filter-name>-->
-    <!--<filter-clcom.jamedow.laodoufangngning.common.system.filter.LearningFilter</filter-class>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-    <!--<filter-name>learningFilter</filter-name>-->
-    <!--<url-pattern>/</url-pattern>-->
-    <!--</filter-mapping>-->
+    <filter>
+        <filter-name>learningFilter</filter-name>
+        <filter-class>com.jamedow.laodoufang.common.system.filter.DomainFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>learningFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
 
     <!-- DruidStatView -->
     <servlet>
