--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -152,11 +152,14 @@
             <version>0.1.2</version>
         </dependency>
 
+        <!-- JSON begin -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.1.46</version>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
         </dependency>
+        <!-- JSON end -->
 
         <!-- 阿里巴巴数据源包 -->
         <dependency>
@@ -221,6 +224,17 @@
             <version>2.32</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.0.pr4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0.pr4</version>
+        </dependency>
     </dependencies>
 
     <profiles>
