--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -183,6 +183,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.6</version>
+        </dependency>
 
         <!--redis-->
         <dependency>
