--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -18,7 +18,8 @@
         <mybatis.generator.version>1.3.5</mybatis.generator.version>
         <!-- jdk 版本号 -->
         <jdk.version>1.8</jdk.version>
-        <!-- elasticsearch 版本号 -->
+        <esarch 版本号
+        -->
         <elasticsearch.version>5.5.1</elasticsearch.version>
     </properties>
 
@@ -243,7 +244,7 @@
             <version>2.9.0.pr4</version>
         </dependency>
 
-        <!--elasticsearch-->
+        esarch-->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>transport</artifactId>
