--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -190,6 +190,13 @@
             <artifactId>commons-net</artifactId>
             <version>3.6</version>
         </dependency>
+        <!-- commons-fileupload begin -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <!-- commons-fileupload end -->
 
         <!--redis-->
         <dependency>
