--- a/first-spring-step/pom.xml
+++ b/first-spring-step/pom.xml
@@ -196,6 +196,11 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
         <!-- commons-fileupload end -->
 
         <!--redis-->
