--- a/first-spring-step/src/main/resources/development/properties/redis.properties
+++ b/first-spring-step/src/main/resources/development/properties/redis.properties
@@ -2,17 +2,17 @@
 redis.host=106.14.210.31
 #redis\u7684\u670D\u52A1\u7AEF\u53E3
 redis.port=6379
-#\u5BC6\u7801
+#\u8BBF\u95EE\u5BC6\u7801
 redis.auth=Z1213l520Yt
 #\u94FE\u63A5\u6570\u636E\u5E93
 redis.default.db=0
 #\u5BA2\u6237\u7AEF\u8D85\u65F6\u65F6\u95F4\u5355\u4F4D\u662F\u6BEB\u79D2
 redis.timeout=100000
-#\u6700\u5927\u8FDE\u63A5\u6570
+#\u6700\u5927\u8FDE\u63A5\u6570,\u9ED8\u8BA4\u503C\u4E3A8 \u5982\u679C\u8D4B\u503C\u4E3A-1\uFF0C\u5219\u8868\u793A\u4E0D\u9650\u5236\uFF1B\u5982\u679Cpool\u5DF2\u7ECF\u5206\u914D\u4E86maxActive\u4E2Ajedis\u5B9E\u4F8B\uFF0C\u5219\u6B64\u65F6pool\u7684\u72B6\u6001\u4E3Aexhausted(\u8017\u5C3D)\u3002
 redis.maxActive=500
-#\u6700\u5927\u7A7A\u95F2\u6570
+#\u6700\u5927\u7A7A\u95F2\u6570 \u63A7\u5236\u4E00\u4E2Apool\u6700\u591A\u6709\u591A\u5C11\u4E2A\u72B6\u6001\u4E3Aidle(\u7A7A\u95F2\u7684)\u7684jedis\u5B9E\u4F8B\uFF0C\u9ED8\u8BA4\u503C\u4E5F\u662F8\u3002
 redis.maxIdle=100
-#\u6700\u5927\u5EFA\u7ACB\u8FDE\u63A5\u7B49\u5F85\u65F6\u95F4
+#\u6700\u5927\u5EFA\u7ACB\u8FDE\u63A5\u7B49\u5F85\u65F6\u95F4 \u7B49\u5F85\u53EF\u7528\u8FDE\u63A5\u7684\u6700\u5927\u65F6\u95F4\uFF0C\u5355\u4F4D\u6BEB\u79D2\uFF0C\u9ED8\u8BA4\u503C\u4E3A-1\uFF0C\u8868\u793A\u6C38\u4E0D\u8D85\u65F6\u3002\u5982\u679C\u8D85\u8FC7\u7B49\u5F85\u65F6\u95F4\uFF0C\u5219\u76F4\u63A5\u629B\u51FAJedisConnectionException\uFF1B
 redis.maxWait=10000
 #\u6307\u660E\u662F\u5426\u5728\u4ECE\u6C60\u4E2D\u53D6\u51FA\u8FDE\u63A5\u524D\u8FDB\u884C\u68C0\u9A8C,\u5982\u679C\u68C0\u9A8C\u5931\u8D25,\u5219\u4ECE\u6C60\u4E2D\u53BB\u9664\u8FDE\u63A5\u5E76\u5C1D\u8BD5\u53D6\u51FA\u53E6\u4E00\u4E2A
 redis.testOnBorrow=true
