--- a/first-spring-step/src/main/resources/development/properties/jdbc.properties
+++ b/first-spring-step/src/main/resources/development/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://106.14.210.31:3306/laodoufang?useUnicode=true&amp;characterEncoding=utf-8
-jdbc.username=jamedow
+jdbc.username=root
 jdbc.password=Zhangliang@520
